--- a/.gitmodules
+++ b/.gitmodules
@@ -35,3 +35,6 @@
 	path = deps/json
 	url = https://github.com/nlohmann/json.git
 	branch = v3.11.2
+[submodule "deps/iw4-open-formats"]
+	path = deps/iw4-open-formats
+	url = https://github.com/Rackover/iw4-open-formats
