fix .gitmodules (maybe)

--- a/.gitmodules
+++ b/.gitmodules
@@ -35,12 +35,12 @@
 	path = deps/json
 	url = https://github.com/nlohmann/json.git
 	branch = v3.11.2
-[submodule "deps/iw4-open-formats"]
-	path = deps/iw4-open-formats
-url=https://github.com/XLabsProject/iw4-open-formats
 [submodule "deps/discord-rpc"]
 	path = deps/discord-rpc
 	url = https://github.com/discord/discord-rpc.git
 [submodule "deps/rapidjson"]
 	path = deps/rapidjson
 	url = https://github.com/Tencent/rapidjson.git
+[submodule "deps/iw4-open-formats"]
+	path = deps/iw4-open-formats
+	url = https://github.com/XLabsProject/iw4-open-formats.git
